# kaixn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/prompt/: SKILL.md
agentkit/: __init__.py  agent.py  prompt.py  tools.py
deploy/: README.md  SESSION-HISTORY.md  cloudformation.yaml  deploy.sh
docker/: entrypoint.sh
docs/: architecture.md  axis-catalog.yaml  bootstrap.md  build-plan.md  engineering-handbook-design.md  engineering-playbook.md  prd-open-questions.md  prd.md  session-2026-06-13-playbook.md  tech-spec.md
docs/playbooks/: encode-starlette.md  kaixn.md
evals/: conflict_cases.jsonl  design_playbook.mjs  guideline_coverage.mjs  playbook_eval_loop.mjs
marketing/: SESSION-HISTORY-2026-06-13.md  index.html
migrations/: 001_init.sql  002_playbook.sql
queries/: read_paths.sql
scripts/: apply_migrations.py  dogfood.py
src/kaixn/: __init__.py  app.py  auth.py  bootstrap.py  codebase.py  conflict.py  embedding.py  engine.py  eval.py  extract.py  gate.py  grounding.py  llm.py  miner.py  playbook.py  playbook_jobs.py  playbook_store.py  resolution.py  review.py  server.py  similarity.py  store.py  types.py  waitlist.py  web.py
src/kaixn/agents/: __init__.py  copilot.py  prompts.py  tools.py
src/kaixn/static/: doc.html  index.html  playbook.html
tests/: test_agentkit.py  test_auth.py  test_bootstrap.py  test_conflict.py  test_engine.py  test_eval.py  test_gate.py  test_mcp_playbook.py  test_miner.py  test_pg.py  test_pm_copilot.py  test_resolution.py  test_review.py  test_scope.py  test_web_chat.py
