[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaixn"
version = "0.2.0"
description = "Product development layer for the agentic world — review Proposals, not PRs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",   # local (Ollama) embeddings
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]          # atomicity split + adjudication
openai = ["openai>=1.30"]                # cloud embeddings (1536)
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
server = ["mcp>=1.2"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
kaixn-server = "kaixn.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kaixn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
